--- a/app/templates/seat-edit.html
+++ b/app/templates/seat-edit.html
@@ -3,7 +3,7 @@ Seat Name: <input type='text' class='form-control' ng-model='vm.temp_seat.name'>
     <th></th> <th class='fplan_day_cell' ng-repeat='day in vm.days'> {{day[0].toUpperCase()}} </th> <th></th>
 <tr ng-repeat="occ in vm.occupants">
     <td>{{occ.name}}</td>
-    <td class='fplan_day_cell' ng-repeat='day in vm.days'> <input type='checkbox' ng-click='vm.preventDayOverlap(day)' ng-model='occ.map_data[vm.selected_map_uid].schedule[day]'> </td>
+    <td class='fplan_day_cell' ng-repeat='day in vm.days'> <input type='checkbox' ng-click='vm.preventDayOverlap(day, occ.map_data[vm.selected_map_uid])' ng-model='occ.map_data[vm.selected_map_uid].schedule[day]'> </td>
     <td><button class='btn btn-default' type='button' ng-click='occ.map_data = null;vm.occupants.splice($index, 1)'>-</button> </td>
 </tr>
 </table>
