--- a/app/templates/fplan.html
+++ b/app/templates/fplan.html
@@ -16,7 +16,7 @@
 </span>
 
         Toggle Edit:
-        <button class='bt btn-default'  ng-click='vm.toggleEditMode()'> <i class='fa fa-{{vm.edit_mode}}'></i></button>
+        <button class='btn btn-default'  ng-click='vm.toggleEditMode()'> <i class='fa fa-{{vm.edit_mode}}'></i></button>
 
         <div class='fplan_size_toggle' style='float:right;'>
             <button class='btn btn-default' ng-click='vm.sidebar_closed=!vm.sidebar_closed;'><i class="fa fa-exchange"></i> </button>
