--- a/app/css/main.css
+++ b/app/css/main.css
@@ -102,3 +102,9 @@ background: white;
 cursor: inherit;
 display: block;
 }
+text {
+    font-size:16px;
+    font-weight:bold;
+    stroke:white;
+    stroke-width:.025em;
+}
